Make `PipelineDAGExporter` text output more readable (#1699)